# shared_mem

./: CMakeLists.txt  README.md  app1.cpp  app2.cpp  build.sh  data.h  shmem.cpp  shmem.h
cmake/: FetchBoost.cmake
examples/: CMakeLists.txt
examples/simple/: CMakeLists.txt  app1.cpp  app2.cpp  data.h
include/schillc/: shared_mem.h  shmem.h
src/: shared_mem.cpp  shmem.cpp
test/: CMakeLists.txt  shmem_test.cpp
